# bevy_aseprite

./: Cargo.toml  README.MD
assets/: crow.aseprite  ghost_slices.aseprite  player.ase
derive/: Cargo.toml
derive/src/: lib.rs
examples/: show-aseprite.rs  show_aseprite.rs  show_slice.rs
reader/: Cargo.toml  README.MD
reader/src/: computed.rs  error.rs  lib.rs  raw.rs
reader/tests/test_cases/: multiple_frames_layers.aseprite  simple.aseprite
src/: anim.rs  lib.rs  loader.rs  slice.rs
src/loader/: error.rs  mod.rs
