[package]
name = "bevy_spicy_aseprite"
version = "0.6.0"
description = "Compile time aseprite bevy integration"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
exclude = ["assets/"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive"]

[dependencies]
anyhow = "1.0.43"
aseprite-reader = { git = "https://github.com/mdenchev/aseprite-reader" }
bevy = { version = "0.6", default-features = false, features = ["render"] }
bevy_spicy_aseprite_derive = { path = "./derive" }

[dev-dependencies]
bevy = { version = "0.6" }