[package]
name = "bevy_aseprite"
version = "0.6.0"
description = "Bevy aseprite loader"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
exclude = ["assets/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive", "reader"]

[dependencies]
anyhow = "1.0.43"
aseprite-reader2 = "0.1.0"
bevy = { version = "0.6", default-features = false, features = ["render"] }
bevy_aseprite_derive = { path = "./derive", version = "0.1" }
bevy_aseprite_reader = { path = "./reader", version = "0.1" }

[dev-dependencies]
bevy = { version = "0.6" }