[package]
name = "bevy_aseprite"
version = "0.12.0"
description = "Bevy aseprite loader"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
exclude = ["assets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["derive", "reader"]

[dependencies]
anyhow = "1.0.43"
bevy = { version = "0.13.0", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
] }
bevy_aseprite_derive = { path = "./derive", version = "0.3" }
bevy_aseprite_reader = { path = "./reader", version = "0.1" }

[dev-dependencies]
bevy = { version = "0.13.0" }
