[package]
name = "bevy_spicy_aseprite_derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
aseprite-reader = { git = "https://github.com/mdenchev/aseprite-reader" }
proc-macro-error = "1.0.4"
heck = "0.3.3"

[patch.'https://github.com/TheNeikos/aseprite-reader']
aseprite-reader = { git = "https://github.com/mdenchev/aseprite-reader" }