[package]
name = "bevy_aseprite_derive"
version = "0.1.0"
description = "Bevy aseprite loader derive"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
aseprite-reader2 = "0.1.0"
proc-macro-error = "1.0.4"
heck = "0.3.3"